--- a/cpa/templates/secretaire.html
+++ b/cpa/templates/secretaire.html
@@ -164,14 +164,39 @@
 
 .header a:hover {
     color: #003d80; /* Darker blue on hover */
-}
-    </style>
+}.header .user-info {
+        display: flex;
+        align-items: center;
+        font-size: 18px; /* Adjust font size */
+        color: #333333; /* Dark grey color */
+    }
+    
+    .header .user-info span {
+        display: inline-block;
+        background-color: #ffffff; /* Light blue background */
+        padding: 10px 15px; /* Adjust padding */
+        border-radius: 5px; /* Rounded corners */
+        font-weight: bold;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+        margin-right: 20px; /* Space between span and link */
+        transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
+    }
+    
+    .header .user-info span:hover {
+        background-color: #c7d7ff; /* Darker blue on hover */
+        transform: scale(1.05); /* Slightly enlarge on hover */
+    }  
+</style>
 </head>
 <body>
     <div class="header">
-        <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo">
+        <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
+        <div class="user-info">
+            <span>{{ user[0] }} {{ user[1] }} ({{ user[2] }})</span>
+        </div>
         <a href="{{ url_for('envoiversagence') }}">
-            <i class='bx bx-calendar icon'></i>Envoi</a>
+            <i class='bx bxs-send icon'></i> Envoi
+        </a>
     </div>
     <div class="container">
         <div class="form-half">
