--- a/cpa/templates/envoiversag.html
+++ b/cpa/templates/envoiversag.html
@@ -139,11 +139,40 @@ a:hover {
     
     vertical-align: middle;
 }  
+.header .user-info {
+    display: flex;
+    align-items: center;
+    font-size: 18px; /* Adjust font size */
+    color: #333333; /* Dark grey color */
+}
+
+.header .user-info span {
+    display: inline-block;
+    background-color: #ffffff; /* Light blue background */
+    padding: 10px 15px; /* Adjust padding */
+    border-radius: 5px; /* Rounded corners */
+    font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+    margin-right: 20px; /* Space between span and link */
+    transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
+}
+
+.header .user-info span:hover {
+    background-color: #c7d7ff; /* Darker blue on hover */
+    transform: scale(1.05); /* Slightly enlarge on hover */
+} 
 </style>
 </head>
 <body>
     <div class="header">
-        <img src="{{ url_for('static', filename='cpa.jpeg') }}" alt="logo">
+        <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
+        <div class="user-info">
+            {% if user_info %}
+                <span>{{ user_info[0] }} {{ user_info[1] }} {{ user_info[2] }}</span>
+            {% else %}
+                <span>User Information Not Available</span>
+            {% endif %}
+        </div>
         <a href="{{ url_for('secretaire') }}">
             <i class='bx bx-calendar icon'></i>Réception</a>
     </div>
